--- a/placa/placa_usb.cmp
+++ b/placa/placa_usb.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by CvPCB (2010-05-05 BZR 2356)-stable date = Sat 27 Nov 2010 22:57:20 ART
+Cmp-Mod V01 Genere par PcbNew le Thu 02 Dec 2010 07:53:15 ART
 
 BeginCmp
 TimeStamp = /48667F87;
@@ -74,7 +74,7 @@ BeginCmp
 TimeStamp = /4CF1A8BC;
 Reference = P5;
 ValeurCmp = USB_A;
-IdModule  = USB_A_custom;
+IdModule  = USB_A_CUSTOM;
 EndCmp
 
 BeginCmp
